k8s/auth-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api
          image: zanziba/auth-api:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
    app: auth-api
  ports:
    - port: 3004
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
