k8s/book-research-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-research-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-research-api
  template:
    metadata:
      labels:
        app: book-research-api
    spec:
      containers:
        - name: book-research-api
          image: zanziba/book-research-api:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: book-research-api
spec:
  selector:
    app: book-research-api
  ports:
    - port: 3001
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
