k8s/mongo_manage.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-manage
spec:
  selector:
    app: mongo-manage
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-manage
spec:
  selector:
    matchLabels:
      app: mongo-manage
  template:
    metadata:
      labels:
        app: mongo-manage
    spec:
      containers:
        - name: mongo-manage
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-manage-storage
              mountPath: /data/db
      volumes:
        - name: mongo-manage-storage
          persistentVolumeClaim:
            claimName: mongo-manage-pvc
      restartPolicy: Always
