k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /search
spec:
  rules:
    - http:
        paths:
          - path: /api/search(/|$)(.*)
            backend:
              serviceName: book-research-api
              servicePort: 3001
          - path: /api/manage(/|$)(.*)
            backend:
              serviceName: book-management-api
              servicePort: 3002
          - path: /api/track(/|$)(.*)
            backend:
              serviceName: book-tracking-api
              servicePort: 3003
          - path: /api/auth(/|$)(.*)
            backend:
              serviceName: auth-api
              servicePort: 3004
